--- a/src/Components/SliderCardList/SliderCardList.css
+++ b/src/Components/SliderCardList/SliderCardList.css
@@ -20,7 +20,7 @@
 }
 
 .lib-slider-card .arrow-left {
-    top: 135px;
+    top: 35%;
     transform: none;
     left: -10px;
     width: 32px;
@@ -36,7 +36,7 @@
 }
 
 .lib-slider-card .arrow-right {
-    top: 135px;
+    top: 35%;
     transform: none;
     right: -10px;
     bottom: 0;
